сделано получение с указанием времени