@@ -7,8 +7,6 @@ import com.jawwr.core.annotations.EnableBroker;
 import org.reflections.Reflections;
 import org.reflections.scanners.SubTypesScanner;
 
-import java.io.ByteArrayOutputStream;
-import java.io.ObjectOutputStream;
 import java.lang.reflect.Method;
 import java.util.*;
 import java.util.logging.Level;
@@ -61,10 +59,7 @@ public class MessageBroker {
 
     public static <T> void sendMessage(String key, T message) {
         byte[] buffer;
-        try (
-                ByteArrayOutputStream baos = new ByteArrayOutputStream();
-                ObjectOutputStream oos = new ObjectOutputStream(baos)
-        ) {
+        try {
             buffer = serializeToJson(message);
             QueuePool.sendMessage(key, buffer);
         } catch (Exception e) {
@@ -80,11 +75,12 @@ public class MessageBroker {
     private static void subscribe(List<Method> subscriber) {
         for (Method method : subscriber) {
             String queueName = getMethod(method).queue();
+            long time = getMethod(method).time();
             TimerTask timerTask = new TimerTask() {
                 @Override
                 public void run() {
                     if (QueuePool.isMessageExist(queueName)) {
-                        receiveMessageBySubscriber(method, queueName);
+                        receiveMessageBySubscriber(method, queueName, time);
                     }
                 }
             };
@@ -93,13 +89,13 @@ public class MessageBroker {
         }
     }
 
-    private static void receiveMessageBySubscriber(Method method, String queueName) {
+    private static void receiveMessageBySubscriber(Method method, String queueName, long time) {
         Class<?> clazz = method.getDeclaringClass();
         Class<?> parameter = method.getParameterTypes()[0];
+        String message = receive(queueName, time);
         try {
-            String message = receive(queueName);
             var arg = deserializeFromJson(message.getBytes(), parameter);
-            method.invoke(clazz.newInstance(), arg);
+            method.invoke(clazz.getConstructor().newInstance(), arg);
         } catch (Exception e) {
             e.printStackTrace();
         }
@@ -122,23 +118,31 @@ public class MessageBroker {
         return new String(message);
     }
 
-    public static String receive(String key, long times){
+    public static String receive(String key, long times) {
         String message = null;
-        try {
-            for (int i = 0; i < times; ++i){
-                message = receive(key);
-                if (message != null){
+        for (int i = 0; ; ++i) {
+            try {
+                if (
+                        QueuePool.getQueues().containsKey(key)
+                                && QueuePool.getQueues().get(key).size() != 0
+                ) {
+                    message = receive(key);
+                    if (message != null) {
+                        break;
+                    }
+                }
+                Thread.sleep(500);
+                if (i * 500L == times) {
                     break;
                 }
-                Thread.sleep(1);
+            } catch (Exception e) {
+                e.printStackTrace();
             }
-        }catch (Exception e){
-            e.printStackTrace();
         }
         return message;
     }
 
-    public static String receive(String key, int seconds){
+    public static String receive(String key, int seconds) {
         return receive(key, seconds * 1000L);
     }
 
